# meridian-web-react

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: publish.yml
src/: component_kit.ts  content_shapes.tsx  form_fields.tsx  html_kit.tsx  index.ts  pagination.ts  panel_renderer.tsx  provider.tsx  react_web_renderer.tsx  shadcn_kit.tsx  view_renderer.tsx
tests/: conformance.test.ts  content_details.test.ts  fixtures.ts  form_fields.test.ts  grammar.test.ts  pagination.test.ts  panel_renderer.test.ts  selection.test.ts  stat.test.ts  view.test.ts
