load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_vite//vite:defs.bzl", "vitest_test")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

# @meridian/web-react — the React renderer tier (kit-agnostic) over the
# WebRenderer seam. Compiles the .tsx adapter + the html reference kit. Resolves
# the seam from @meridian/core/uiview and the canonical types from
# @meridian/proto-ts (both first-party links in //:BUILD.bazel); react is its own.
ts_project(
    name = "web_react",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
    ]),
    declaration = True,
    transpiler = "tsc",
    tsconfig = "tsconfig.json",
    deps = [
        ":node_modules/@types/react",
        ":node_modules/@types/react-dom",
        ":node_modules/react",
        ":node_modules/react-dom",
        "//:node_modules/@bufbuild/protobuf",
        "//:node_modules/@meridian/core",
        "//:node_modules/@meridian/proto-ts",
    ],
)

# The compiled renderer surface, as a js_library the test can import via
# ../src/*.js (mirrors //tests:src_lib).
js_library(
    name = "web_react_lib",
    srcs = [":web_react"],
)

# Runtime test: renders a PanelDescriptor through htmlKit via react-dom/server.
vitest_test(
    name = "test",
    srcs = ["tests/panel_renderer.test.ts"],
    deps = [
        ":node_modules/react",
        ":node_modules/react-dom",
        ":web_react_lib",
        "//:node_modules/@bufbuild/protobuf",
        "//:node_modules/@meridian/proto-ts",
        "//:node_modules/vitest",
    ],
)

# Cross-shape conformance over the canonical fixtures (the crank gate seed): every
# meridian.ui.v1 shape renders, htmlKit covers what it claims, adhoc routes.
vitest_test(
    name = "conformance",
    srcs = [
        "tests/conformance.test.ts",
        "tests/fixtures.ts",
    ],
    deps = [
        ":node_modules/react",
        ":node_modules/react-dom",
        ":web_react_lib",
        "//:node_modules/@bufbuild/protobuf",
        "//:node_modules/@meridian/proto-ts",
        "//:node_modules/vitest",
    ],
)
