module(
    name = "meridian_web_react",
    version = "0.1.0",
)

# @savvifi/meridian-web-react — the kit-agnostic React renderer tier over the
# meridian WebRenderer seam. It consumes the design language purely as npm
# packages (@savvifi/meridian-schemas + @savvifi/meridian-proto-ts from npmjs,
# via the pnpm lockfile), so there is NO bazel_dep on meridian-schemas — the TS
# surface crosses repos through npm, not the Bazel module graph. React is its own
# dependency; this module pulls in only the JS/TS toolchain + rules_vite (tests).
bazel_dep(name = "aspect_rules_js", version = "3.1.2")
bazel_dep(name = "aspect_rules_ts", version = "3.8.9")
bazel_dep(name = "rules_nodejs", version = "6.7.4")
bazel_dep(name = "bazel_skylib", version = "1.8.2")

# rules_vite is dev-only: it wires the vitest_test targets (the conformance gate).
# It lives in the tomato-bazel registry (see .bazelrc), not BCR.
bazel_dep(name = "rules_vite", version = "0.1.0", dev_dependency = True)

node = use_extension(
    "@rules_nodejs//nodejs:extensions.bzl",
    "node",
    dev_dependency = True,
)
node.toolchain(node_version = "22.11.0")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
rules_ts_ext.deps(ts_version = "5.6.3")
use_repo(rules_ts_ext, "npm_typescript")

npm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "npm",
    dev_dependency = True,
)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")
